--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,10 +56,22 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
 
-    // ViewModel and LiveData
-//    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
-//    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    // RecyclerView
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
 
+
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
+    // Moshi for parse
+    implementation "com.squareup.moshi:moshi:1.9.2"
+    implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
+
+    //Retrofit for api
+    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation "com.squareup.retrofit2:retrofit:2.5.0"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
 
     // Lifecycle
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
